--- a/CheKhabar.iOS/CheKhabar.iOS.csproj
+++ b/CheKhabar.iOS/CheKhabar.iOS.csproj
@@ -136,7 +136,7 @@
       <Version>1.7.335</Version>
     </PackageReference>
     <PackageReference Include="Xam.Plugin.Geolocator">
-      <Version>4.5.0.6</Version>
+      <Version>4.6.2-beta</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
