--- a/CheKhabar.Android/Properties/AndroidManifest.xml
+++ b/CheKhabar.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.majiddarvishan.chekhabar" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="30" />
-	<application android:label="CheKhabar.Android" android:theme="@style/MainTheme">
+	<application android:label="CheKhabar" android:theme="@style/MainTheme" android:icon="@mipmap/ic_launcher">
 		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyD-_KUO2HaRxAWhrf6XP0eOoaX9J7YTCzA" />
 	</application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
